--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
             @apply rounded-full bg-gray-500 p-1.5
         }
         .graylight-dot {
-            @apply rounded-full bg-green-300 p-1.5
+            @apply rounded-full bg-gray-300 p-1.5
         }
 
     </style>
@@ -121,6 +121,11 @@
     {% block layout %}
     {% endblock %}
 
+
+    {% if user.is_authenticated %}
+    <footer hx-ext="ws" ws-connect="/ws/online-status/"></footer>
+    {% endif %}
+    
     {% block javascript %}{% endblock %}
 
 </body>
