--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,14 +1,25 @@
 {% load static %}
-<header class="flex items-center justify-between bg-teal-900 h-20 px-20 text-white sticky top-0 z-40">
-    <div class="flex items-center">
-        <a class="flex items-center gap-2" href="/">
-            <img class="h-6" src="{% static 'images/logo.svg' %}" alt="Logo"/>
-            <span class="text-2xl font-bold">What's Up</span>
-        </a>
+<header x-data="{ mobilenavOpen: false }" class="md:flex items-center justify-between [&>*]:px-8 bg-teal-800 h-20 text-white sticky top-0 z-40">
+    <div class="flex items-center justify-between h-20">
+        <logo>
+            <a class="flex items-center gap-1" href="/">
+                <img class="w-8 mr-1 -mt-1" src="{% static 'images/logo.svg' %}" alt="Logo"/>
+                <span class="text-lg font-bold">What's Up</span>
+            </a>
+        </logo>
+        <mobileicon class="md:hidden">
+            <a @click="mobilenavOpen = !mobilenavOpen" class="h-12 w-12 flex items-center justify-center cursor-pointer hover:bg-teal-700 rounded-lg">
+                <img x-show="!mobilenavOpen" class="w-6 h-6 select-none" src="https://img.icons8.com/small/64/ffffff/menu.png"/> 
+                <img x-show="mobilenavOpen" x-cloak class="w-6 h-6 select-none" src="https://img.icons8.com/small/64/ffffff/delete-sign.png"/>
+            </a>
+        </mobileicon>
         <div id="online-user-count"></div>
     </div>
-    <nav class="block relative">
-        <ul class="navitems flex items-center justify-center h-full">
+    <nav x-show="mobilenavOpen" x-cloak class="md:!block bg-teal-800 h-screen w-screen md:h-auto md:w-auto -mt-20 md:mt-0 absolute md:relative z-[-1]"
+    x-transition:enter="duration-300 ease-out"
+    x-transition:enter-start="opacity-0 -translate-y-96"
+    x-transition:enter-end="opacity-100 translate-y-0">
+        <ul class="flex items-center navitems flex-col md:flex-row gap-8 md:gap-0 justify-center h-full -translate-y-10 md:translate-y-0">
             {% if request.user.is_authenticated %}
             <li x-data="{ dropdownOpen: false }" class="relative">
                 <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false" class="cursor-pointer select-none">
