--- a/a_rtchat/templates/a_rtchat/partials/message_content.html
+++ b/a_rtchat/templates/a_rtchat/partials/message_content.html
@@ -2,7 +2,7 @@
     <span>{{ message.body }}</span>
 {% elif message.file %}
     {% if message.is_image %}
-        <img class="max-w-72 min-w-8" src="{{ message.file.url }}">
+        <img src="{{ message.file.url }}" class="max-w-72 min-w-8" >
     {% else %}
         &#x1F4CE; <a href="{{ message.file.url }}" class="cursor-pointer italic hover:underline" download>{{ message.filename }}</a>
     {% endif %}  
