--- a/a_users/templates/a_users/profile.html
+++ b/a_users/templates/a_users/profile.html
@@ -1,19 +1,40 @@
-{% extends 'layouts/blank.html' %}
+{% extends 'layouts/box.html' %}
+
+{% block title %}{{ profile.user.username }} | {% endblock %}
 
 {% block content %}
 
-<div class="max-w-lg mx-auto flex flex-col items-center pt-20 px-4">
-    <img class="w-36 h-36 rounded-full object-cover mb-4" src="{{ profile.avatar }}" />
-    <div class="text-center">
-        <h1>{{ profile.name }}</h1>
-        <div class="text-gray-400 mb-2 -mt-3">@{{ profile.user.username }}</div>
-        {% if profile.info %}
-        <div class="mt-8 hyphens-auto">{{ profile.info|linebreaksbr }}</div>
-        {% endif %}
-        {% if profile.user != user %}
-        <a class="button" href="{% url 'start-chat' profile.user.username %}">Chat with me</a>
-        {% endif %}
+<div id="profile" class="flex flex-col items-center">
+
+    <div class="w-full md:w-[36rem] lg:w-[50rem]">
+        <div class="card p-6">
+            <div class="text-center flex flex-col items-center">
+                <img class="w-36 h-36 rounded-full object-cover mb-4" src="{{ profile.avatar }}" />
+                <div class="text-center max-w-md">
+                    <h1>{{ profile.name }}</h1>
+                    <div class="text-gray-400 mb-2 -mt-3">@{{ profile.user.username }}</div>
+                    <div class="flex items-center justify-center mx-auto">
+                        <img class="object-cover h-6 mr-1 opacity-60" src="https://img.icons8.com/material-outlined/50/000000/marker.png">
+                        {% if profile.location %}
+                        {{ profile.location }}
+                        {% else %}
+                        Planet Earth
+                        {% endif %}
+                    </div>
+                    <div class="my-8">
+                        {% if profile.info %}
+                        {{ profile.info }}
+                        {% else %}
+                        Professional procrastinator
+                        {% endif %}
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
+
 </div>
+
 
 {% endblock %}
