--- a/static/css/style.css
+++ b/static/css/style.css
@@ -706,6 +706,11 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -714,6 +719,11 @@ video {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .-mt-1 {
@@ -786,6 +796,42 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mr-10 {
+  margin-right: 2.5rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-48 {
+  margin-top: 12rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-60 {
+  margin-top: 15rem;
+}
+
+.mt-56 {
+  margin-top: 14rem;
 }
 
 .block {
@@ -908,8 +954,24 @@ video {
   width: 100vw;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
 .min-w-8 {
   min-width: 2rem;
+}
+
+.min-w-0 {
+  min-width: 0px;
 }
 
 .max-w-2xl {
@@ -922,10 +984,6 @@ video {
 
 .max-w-4xl {
   max-width: 56rem;
-}
-
-.max-w-72 {
-  max-width: 18rem;
 }
 
 .max-w-\[75\%\] {
@@ -942,6 +1000,22 @@ video {
 
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-40 {
+  max-width: 10rem;
+}
+
+.max-w-72 {
+  max-width: 18rem;
+}
+
+.max-w-\[20\] {
+  max-width: 20;
+}
+
+.max-w-\[20rem\] {
+  max-width: 20rem;
 }
 
 .grow {
@@ -1169,36 +1243,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-green-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
-}
-
-.bg-teal-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 78 74 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
 }
@@ -1291,6 +1335,21 @@ video {
   padding-bottom: 1rem;
 }
 
+.\!py-\[1\.\] {
+  padding-top: 1. !important;
+  padding-bottom: 1. !important;
+}
+
+.\!py-\[1\.1rem\] {
+  padding-top: 1.1rem !important;
+  padding-bottom: 1.1rem !important;
+}
+
+.\!px-6 {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1311,6 +1370,10 @@ video {
   padding-left: 1.5rem;
 }
 
+.pl-8 {
+  padding-left: 2rem;
+}
+
 .pr-1 {
   padding-right: 0.25rem;
 }
@@ -1329,6 +1392,14 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pt-48 {
+  padding-top: 12rem;
 }
 
 .text-left {
@@ -1391,6 +1462,10 @@ video {
 
 .leading-5 {
   line-height: 1.25rem;
+}
+
+.leading-tight {
+  line-height: 1.25;
 }
 
 .text-amber-500 {
