--- a/a_landingpages/templates/a_landingpages/maintenance.html
+++ b/a_landingpages/templates/a_landingpages/maintenance.html
@@ -1,5 +1,8 @@
 {% extends 'a_landingpages/base.html' %}
 
+
+{% block title %}Maintenance | {% endblock %}
+
 {% block content %}
 
 <h1 class="edu text-6xl mb-8 leading-tight text-white">Site is currently down for maintenance</h1>
