--- a/a_users/templates/a_users/profile_settings.html
+++ b/a_users/templates/a_users/profile_settings.html
@@ -1,5 +1,10 @@
 {% extends 'layouts/box.html' %}
 
+
+{% block title %}Settings Profile | {% endblock %}
+
+
+
 {% block content %}
 
 <h1 class="mb-8">Account Settings</h1>
