--- a/a_users/templates/a_users/profile_delete.html
+++ b/a_users/templates/a_users/profile_delete.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/box.html' %}
 
+{% block title %}Delete Profile | {% endblock %}
+
 {% block content %}
 
 <h1>Delete Account</h1>
