--- a/a_users/templates/a_users/profile_onboarding.html
+++ b/a_users/templates/a_users/profile_onboarding.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/box.html' %}
 
+{% block title %}Edit Profile | {% endblock %}
+
 {% block content %}
 
 <h1 class="mb-2">Complete your Profile</h1>
